@@ -9,6 +9,8 @@ Stable versions
 	- multichannel mods written with Scream Tracker don't use Amiga note
 	  limits (fixes Earth Mountains, reported by Samuli Sorvakko)
 	- fix start option in DeusEx's .umx files (by erlk ozlr)
+	- add OpenBSD sndio driver (by Thomas Pfaff)
+	- fix XM loader memory leak caused by extra pattern not deallocated
 
 2.5.1 (20071207): 11 years after xmp 0.09a, the first public release!
 	- fix Winamp plugin default sampling rate (reported by Mirko Buffoni)
